chore. 주석 가독성 추가